tests/negative/req07/undeclared_effect.mvl
// corpus:expect-fail
// expect-requirement: 7
// Scenario: function calls write but does not declare ! Console in its signature.
// Triggers: CheckError::UndeclaredEffect (req7)

use std.io.{Fd, stdout, write, IoError}

type Event = struct {
    name: String,
    severity: Int,
}

fn log_event(ev: Event) -> Unit {
    // BUG: `write` requires `! Console` but the signature declares no effects.
    let h: Fd = stdout();
    let _: Result[Unit, IoError] = write(h, ev.name);
}

fn main() -> Unit ! Console {
    let ev: Event = Event { name: "startup", severity: 0 };
    log_event(ev);
}
